# jenkins-workshop

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
doxygen/: Doxyfile
include/: Galaxy.h  Star.h
src/: CMakeLists.txt  Galaxy.cpp
test/: CMakeLists.txt  Galaxy.cpp  main.cpp
